...
    <string name="about">About</string>
    <string name="app_name">PasswdSafe LIBRARY</string>
    <string name="app_settings">App Settings</string>
    <string name="box">Box</string>
    <string name="build_date">Build date</string>
    <string name="build_id">Build ID</string>
    <string name="cancel">Cancel</string>
    <string name="choose_files">Choose Files</string>
    <string name="close">Close</string>
    <string name="close_file">Close File</string>
    <string name="copy_clipboard">Copy to Clipboard</string>
    <string name="copy_clipboard_error">%1$s - Error copying to the clipboard.  The error may be due to a known error in Samsung devices.</string>
    <string name="copy_trace">Copy Trace</string>
...
