...
    <string name="press_yubikey">Press YubiKey</string>
    <string name="previous">Previous</string>
    <string name="protect_all">Protect All Records</string>
    <string name="protect_group">Protect Group Records</string>
    <string name="protected_record">Protected</string>
    <string name="protected_record_header">PROTECTED RECORD</string>
    <string name="psafe3_ext">.psafe3</string>
    <string name="query_label">Search: %1$s</string>
    <string name="recent_files">Recent Files</string>
    <string name="record">Record</string>
    <string name="records">Records</string>
    <string name="record_errors">Record Errors</string>
    <string name="record_error_note">
...
